--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#5D5D5E"
     tools:context=".MainActivity">
 
     <TextView
-        android:textSize="65dp"
         android:id="@+id/chooserole"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Choose role"
+        android:textSize="65dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
