--- a/app/src/main/res/layout/activity_passengerhome.xml
+++ b/app/src/main/res/layout/activity_passengerhome.xml
@@ -23,7 +23,7 @@
     <Button
         android:id="@+id/button3"
         android:layout_width="178dp"
-        android:layout_height="0dp"
+        android:layout_height="78dp"
         android:layout_marginStart="28dp"
         android:layout_marginTop="136dp"
         android:layout_marginBottom="455dp"
@@ -54,5 +54,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button3" />
+
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="67dp"
+        android:layout_marginTop="79dp"
+        android:text="firstname"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
