--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#5D5D5E"
-    tools:context=".MainActivity">
+    tools:context=".homepage">
 
     <TextView
         android:id="@+id/chooserole"
